QA bugs fix for button, fullbleed, image-text, double-image, initial-teaser, image-tiles, icon-number, icon-number-tabs and footer hover scss

--- a/ui.frontend/src/main/webpack/components/double-text-image/_double-text-image.scss
+++ b/ui.frontend/src/main/webpack/components/double-text-image/_double-text-image.scss
@@ -29,6 +29,7 @@
 
   .second-text-image {
     margin-top: -27px !important;
+    margin-bottom: 70px;
 
     .cmp-image__left img {
       margin-left: -10px;
