--- a/ui.frontend/src/main/webpack/components/footer/_footer.scss
+++ b/ui.frontend/src/main/webpack/components/footer/_footer.scss
@@ -81,6 +81,9 @@
             list-style:none;
             padding: 0;
             margin:0;
+            li{
+                padding-bottom: 10px;
+            }
 
              @media screen and (max-width: 767px) {
                 padding-left: 8px;
@@ -100,6 +103,11 @@
                 line-height: 1.71;
                 letter-spacing: -0.2px;
                 color: #ececec;
+                padding-bottom: 3px;
+                border-bottom: solid 1px transparent;
+                &:hover{
+                    border-color: $color-primary-button;
+                }
             }
         }
     }
