--- a/ui.frontend/src/main/webpack/components/general-container/_general-container.scss
+++ b/ui.frontend/src/main/webpack/components/general-container/_general-container.scss
@@ -4,6 +4,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 35px;
   }
   .cmp-container-headline{
     font-family: Univers65;
